本地调试压缩byte 1. 添加十六进制字符串装byte数组方法 2. bug fix 自实现的 lzss（传参相关） 3. 测试记录

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,10 @@ add_executable(reference_lzss_test reference_lzss_test.c)
 target_link_libraries(reference_lzss_test reference_lib)
 
 
-# reference lzss 测试程序
+# myimplement lzss 测试程序
 add_executable(myimplement_lzss_test myimplement_lzss_test.c)
 target_link_libraries(myimplement_lzss_test myimplement_lib)
+
+# myimplement byte tool 测试程序
+add_executable(byte_tool_test byte_tool_test.c)
+target_link_libraries(byte_tool_test myimplement_lib)
