--- a/lzss-java/pom.xml
+++ b/lzss-java/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.blankbro</groupId>
-    <artifactId>java-implement</artifactId>
+    <artifactId>lzss-java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
